// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render component properly 1`] = `
<div
  className="textarea textarea-mb"
>
  <label
    className="textarea__label"
  >
    test
  </label>
  <textarea
    className="textarea__textarea"
  />
</div>
`;

exports[`should render component with error field 1`] = `
<div
  className="textarea textarea-mb"
>
  <label
    className="textarea__label"
  >
    test
  </label>
  <textarea
    className="textarea__textarea"
  />
  <span
    className="input-error"
  >
    test error
  </span>
</div>
`;
